[REFACTOR] unmodifiable list